pathmind-webapp/frontend/styles/views/experiment-view.css
.experiment-view .section-title-label {
    flex: 1 0 auto;
    line-height: 1;
}

.experiment-view .view-section {
    box-sizing: border-box;
    width: 100%;
    min-width: auto;
    background: white;
    border-radius: 0;
    padding: var(--lumo-space-m);
    overflow: auto; /* For Firefox's clipped wrapper due to Vaadin-chart's unexpected too-wide rendered size */
}

.experiment-view .middle-panel > vaadin-vertical-layout:first-child {
    flex: 0 0 auto;
    width: auto !important;
}

.experiment-view .middle-panel > vaadin-vertical-layout + vaadin-vertical-layout {
    flex: 1 1 auto;
    width: 50% !important;
}

.experiment-view .simulation-metrics-table-wrapper {
    box-sizing: border-box;
    flex: 1;
    width: 100%;
    max-height: calc(1.8em * 20);
    font-size: var(--lumo-font-size-s);
    line-height: 1.8;
    padding: var(--lumo-space-s);
    padding-top: 0;
    border: 1px solid var(--pm-gray-color);
    border-radius: var(--lumo-border-radius);
    overflow: auto;
}

.experiment-view .reward-variables-table {
    font-size: var(--lumo-font-size-xs);
}

.experiment-view .reward-variables-table[readonly] .header-row {
    display: block;
}

.experiment-view .reward-variables-table[readonly] .header-row span:last-child {
    justify-content: flex-start;
    line-height: 2rem;
    padding: 0;
}

.experiment-view .simulation-metrics-table-wrapper .header {
    display: flex;
    justify-content: flex-end;
    position: sticky;
    width: 100%;
    top: 0;
    color: var(--pm-secondary-text-color);
    background-color: white;
}

.experiment-view .simulation-metrics-table-wrapper .header .helper-icon {
    flex-shrink: 0;
    margin-left: var(--lumo-space-xxs);
}

.experiment-view .simulation-metrics-table-wrapper .header .helper-icon:hover {
    color: var(--pm-secondary-text-color);
}

.experiment-view .simulation-metrics-table-wrapper .header iron-icon {
    --iron-icon-width: var(--lumo-font-size-s);
    --iron-icon-height: var(--lumo-font-size-s);
}

.experiment-view .reward-variables-table span:first-child {
    display: none;
}
.experiment-view .reward-variable-name-field {
    height: 1.75rem;
    border-radius: 3px;
    box-shadow: none;
}

.experiment-view .metrics-wrapper span {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
    height: 2rem;
    font-size: var(--lumo-font-size-xs);
    line-height: 1;
    margin-left: var(--lumo-space-s);
}

.experiment-view .metrics-wrapper,
.experiment-view .sparklines-wrapper {
    flex: 1 0 0;
    line-height: 2rem;
}

.experiment-view .metrics-wrapper {
    align-items: flex-end;
}

.experiment-view vaadin-chart {
    min-height: 25rem;
}

.experiment-view .bottom-panel,
.experiment-view .row-2-of-3 vaadin-vertical-layout {
    flex: 1;
}

.experiment-view .buttons-wrapper {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    width: 100%;
}

.experiment-view .buttons-wrapper vaadin-button:not(:first-child) {
    margin-left: var(--lumo-space-s);
}

.experiment-view juicy-ace-editor {
    display: block;
}

.experiment-view .bold-label,
.new-experiment-view .bold-label {
    margin-bottom: var(--lumo-space-xs);
}

.experiment-view .score {
    font-size: var(--lumo-font-size-xl);
    font-weight: bold;
    color: var(--lumo-primary-text-color);
    line-height: 1;
}

.experiment-view .training-starting-placeholder {
    justify-content: center;
    align-items: center;
    flex: 1;
    position: relative;
    min-height: 25rem;
    background-color: var(--pm-highlight-light);
    padding: var(--lumo-space-m) var(--lumo-space-xxl);
    border: 1px solid var(--pm-gray-color);
    border-radius: var(--lumo-border-radius);
}

.experiment-view .training-starting-placeholder chart-placeholder {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0.4;
}

.experiment-view .training-starting-placeholder chart-placeholder + vaadin-vertical-layout {
    justify-content: center;
    position: relative;
    max-width: 640px;
    width: 100%;
}

.experiment-view .training-starting-placeholder span {
    display: block;
    position: relative;
    font-size: var(--lumo-font-size-l);
    font-weight: bold;
    line-height: 1;
    padding-left: 2rem;
    margin-bottom: 0.75em;
}

.experiment-view .training-starting-placeholder span::before {
    top: -0.2rem !important;
}

.training-status-details-panel vaadin-vertical-layout {
    width: auto !important;
    margin-left: var(--lumo-space-l);
}

.training-status-details-panel span,
.experiment-view elapsed-timer {
    font-size: var(--lumo-font-size-xs);
    line-height: 1.2;
}

.experiment-view elapsed-time {
    align-self: flex-start;
}

.training-status-details-panel span:first-child {
    color: var(--lumo-primary-text-color);
    font-weight: bold;
}

.experiment-view vaadin-progress-bar {
    width: 6rem;
    margin: var(--lumo-space-xs) 0 var(--lumo-space-xxs);
}

.experiment-view vaadin-progress-bar + div {
    display: flex;
}

.experiment-view vaadin-progress-bar + div span:last-child {
    margin-left: var(--lumo-space-xxxs);
}

.experiment-view .reason-why-the-training-stopped {
    box-sizing: border-box;
    width: 100%;
}

